--- a/index.html
+++ b/index.html
@@ -14,51 +14,27 @@
                 <img class="banner-img" src="resources/images/descarga.jpeg" alt="Insignia José Laurencio Silva" />
                 <h1 class="banner-title"><a href="/index.html">E.T.I.R.Z - José Laurencio Silva</a></h1>
             </div>
-            <nav class="nav-bar">
-                <div class="nav-opc">
-                    <p>Inicio</p>
-                </div>
-                <div class="nav-opc">
-                    <p>Menciones</p>
-                </div>
-                <div class="nav-opc">
-                    <p>Nosotros</p>
-                </div>
-                <div class="nav-opc">
-                    <p>Servicios</p>
-                </div>
-                <div class="nav-opc">
-                    <p>Estructura Fisica</p>
-                </div>
-                <div class="nav-opc">
-                    <p>Galeria</p>
-                </div>
-            </nav>
         </header>
-            <main class="main-container">
-                <div class="main-content">
-                    <div class="main-img"></div>
-                    <div class="main-resume">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, voluptas dignissimos? Provident dolorem, aspernatur in esse, quo explicabo obcaecati unde nam rerum nobis consequatur quod beatae. Consequatur dicta voluptates pariatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur modi aliquid omnis eius quod, incidunt eligendi placeat odit animi quidem, debitis repudiandae ea recusandae </p>
+        <main class="main-container">
+            <section class="main-section">
+                <article class="main-img"></article>
+                <article class="main-resume">
+                    <p>El Liceo "José Laurencio Silva", es la escuela donde se ofrece estudios correspondientes al Nivel de Educación Básica General y profesional. Se encuentra ubicada en Tinaquillo, estado Cojedes. Calle Plaza frente a la Urbanización Buenos Aires.</p>
+                </article>
+            </section>
+            <section class="main-section">
+                <article>
+                    <h2 class="article-title">Menciones</h2>
+                    <div class="article-container">
+                        <div class="article-content">
+                            <p>Mecanica</p>
+                            <p>Administracion</p>
+                            <p>Minas</p>
+                            <p>Informatica</p>
+                        </div>
                     </div>
-                </div>
-            </main>
-        <!-- <center><h1>E.T.I.R.Z</h1></center>
-        <table>
-            <tr>
-                <td>Inicio</td>
-                <td>Nosotros</td>
-                <td>Menciones</td>
-                <td>Estructura</td>
-            </tr>
-        </table>
-        <br>
-        <p>Estructura:</p>
-        <ul>
-            <li>Comedor</li>
-            <li>Cancha</li>
-            <li>Estacionamiento</li>
-            <li>Taller de mecanica</li>
-        </ul> -->
+                </article>
+            </section>
+        </main>
     </body>
 </html>
