--- a/index.html
+++ b/index.html
@@ -23,14 +23,33 @@
                 </article>
             </section>
             <section class="main-section">
-                <article>
+                <article class="menciones">
                     <h2 class="article-title">Menciones</h2>
                     <div class="article-container">
                         <div class="article-content">
-                            <p>Mecanica</p>
-                            <p>Administracion</p>
-                            <p>Minas</p>
-                            <p>Informatica</p>
+                            <div>
+                                <p>Mecanica</p>
+                                <p>Administracion</p>
+                            </div>
+                            <div>
+                                <p>Minas</p>
+                                <p>Informatica</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="nosotros">
+                    <h2 class="article-title">Nosotros</h2>
+                    <div class="article-container">
+                        <div class="article-content">
+                            <div>
+                                <p>Historia</p>
+                                <p>Misión</p>
+                            </div>
+                            <div>
+                                <p>Visión</p>
+                                <p>Valores</p>
+                            </div>
                         </div>
                     </div>
                 </article>
