--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
         </header>
         <main class="main-container">
             <section class="main-section">
+            <div class="div-section">
                 <article class="main-img"></article>
                 <article class="main-resume">
                     <p>El Liceo "José Laurencio Silva", es la escuela donde se ofrece estudios correspondientes al Nivel de Educación Básica General y profesional. Se encuentra ubicada en Tinaquillo, estado Cojedes. Calle Plaza frente a la Urbanización Buenos Aires.</p>
                 </article>
-            </section>
-            <section class="main-section">
+            </div>
+            <div class="div-section">
                 <article class="menciones">
                     <h2 class="article-title">Menciones</h2>
                     <div class="article-container">
@@ -53,6 +54,17 @@
                         </div>
                     </div>
                 </article>
+                <article class="estructura">
+                    <h2 class="article-title">Estructura</h2>
+                    <div class="article-container">
+                        <div class="article-content">
+                            <div>
+                                <p>Estructura Fisica</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+            </div>
             </section>
         </main>
     </body>
