"Resumen del Liceo".
Se agrego una imágen  y resumen del liceo con un efecto de degradado.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
         <main class="main-container">
             <section class="main-section">
             <div class="div-section">
-                <article class="main-img"></article>
                 <article class="main-resume">
-                    <p>El Liceo "José Laurencio Silva", es la escuela donde se ofrece estudios correspondientes al Nivel de Educación Básica General y profesional. Se encuentra ubicada en Tinaquillo, estado Cojedes. Calle Plaza frente a la Urbanización Buenos Aires.</p>
+                    <p class="text-resume">El Liceo "José Laurencio Silva", es la escuela donde se ofrece estudios correspondientes al Nivel de Educación Básica general y profesional. Se encuentra ubicado en Tinaquillo, estado Cojedes. Calle Plaza frente a la Urbanización Buenos Aires.</p>
                 </article>
             </div>
             <div class="div-section">
