--- a/index.html
+++ b/index.html
@@ -15,56 +15,69 @@
                 <h1 class="banner-title"><a href="/index.html">E.T.I.R.Z - José Laurencio Silva</a></h1>
             </div>
         </header>
-        <main class="main-container">
+        <main>
             <section class="main-section">
-            <div class="div-section">
-                <article class="main-resume">
-                    <p class="text-resume">El Liceo "José Laurencio Silva", es la escuela donde se ofrece estudios correspondientes al Nivel de Educación Básica general y profesional. Se encuentra ubicado en Tinaquillo, estado Cojedes. Calle Plaza frente a la Urbanización Buenos Aires.</p>
-                </article>
-            </div>
-            <div class="div-section">
-                <article class="menciones">
-                    <h2 class="article-title">Menciones</h2>
-                    <div class="article-container">
-                        <div class="article-content">
-                            <div>
-                                <p>Mecanica</p>
-                                <p>Administracion</p>
-                            </div>
-                            <div>
-                                <p>Minas</p>
-                                <p>Informatica</p>
-                            </div>
-                        </div>
-                    </div>
-                </article>
-                <article class="nosotros">
-                    <h2 class="article-title">Nosotros</h2>
-                    <div class="article-container">
-                        <div class="article-content">
-                            <div>
-                                <p>Historia</p>
-                                <p>Misión</p>
-                            </div>
-                            <div>
-                                <p>Visión</p>
-                                <p>Valores</p>
+                <div class="div-section">
+                    <article class="main-resume">
+                        <p class="text-resume">El Liceo "José Laurencio Silva", es la escuela donde se ofrece estudios correspondientes al Nivel de Educación Básica general y profesional.</p>
+                    </article>
+                </div>
+                <hr>
+                <div class="div-section">
+                    <article class="menciones">
+                        <h2 class="article-title">Menciones</h2>
+                        <div class="article-container">
+                            <div class="article-content">
+                                <div>
+                                    <p>Mecánica</p>
+                                    <p>Administración</p>
+                                </div>
+                                <div>
+                                    <p>Minas</p>
+                                    <p>Informática</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </article>
-                <article class="estructura">
-                    <h2 class="article-title">Estructura</h2>
-                    <div class="article-container">
-                        <div class="article-content">
-                            <div>
-                                <p>Estructura Fisica</p>
+                    </article>
+                    <article class="nosotros">
+                        <h2 class="article-title">Nosotros</h2>
+                        <div class="article-container">
+                            <div class="article-content">
+                                <div>
+                                    <p>Historia</p>
+                                    <p>Misión</p>
+                                </div>
+                                <div>
+                                    <p>Visión</p>
+                                    <p>Valores</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </article>
-            </div>
+                    </article>
+                    <article class="estructura">
+                        <h2 class="article-title">Estructura</h2>
+                        <div class="article-container">
+                            <div class="article-content">
+                                <div>
+                                    <p>Estructura Física</p>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                </div>
             </section>
         </main>
+        <footer>
+            <div class="footer-div">
+                <div class="footer-directon">
+                    <h3 class="footer-title">Dirección</h3>
+                    <p>Tinaquillo, estado Cojedes.<br>Calle Plaza frente a la Urbanización Buenos Aires.</p>
+                </div>
+                <div class="footer-contacs">
+                    <h3 class="footer-title">Contactos</h3>
+                    <p>Correo : <b>www.etirz123@gmail.com</b></p>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
