--- a/index.html
+++ b/index.html
@@ -64,6 +64,26 @@
                             </div>
                         </div>
                     </article>
+                    <article class="servicios">
+                        <h2 class="article-title">Servicios</h2>
+                        <div class="article-container">
+                            <div class="article-content">
+                                <div>
+                                    <p>Servicios</p>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="galeria">
+                        <h2 class="article-title">Galería</h2>
+                        <div class="article-container">
+                            <div class="article-content">
+                                <div>
+                                    <p>Galería</p>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
                 </div>
             </section>
         </main>
