--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-HMVM5Z2JYX"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+
+            gtag("config", "G-HMVM5Z2JYX");
+        </script>
         <meta charset="UTF-8" />
         <title>Inicio - ETIRZ</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -22,7 +33,7 @@
                         <p class="text-resume">El Liceo "José Laurencio Silva", es la escuela donde se ofrece estudios correspondientes al Nivel de Educación Básica general y profesional.</p>
                     </article>
                 </div>
-                <hr>
+                <hr />
                 <div class="div-section">
                     <article class="menciones">
                         <h2 class="article-title">Menciones</h2>
@@ -91,7 +102,7 @@
             <div class="footer-div">
                 <div class="footer-directon">
                     <h3 class="footer-title">Dirección</h3>
-                    <p>Tinaquillo, estado Cojedes.<br>Calle Plaza frente a la Urbanización Buenos Aires.</p>
+                    <p>Tinaquillo, estado Cojedes.<br />Calle Plaza frente a la Urbanización Buenos Aires.</p>
                 </div>
                 <div class="footer-contacs">
                     <h3 class="footer-title">Contactos</h3>
