--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <body>
         <header>
             <div class="banner-div">
-                <img class="banner-img" src="resources/images/descarga.jpeg" alt="Insignia José Laurencio Silva" />
-                <h1 class="banner-title"><a href="/index.html">E.T.I.R.Z - José Laurencio Silva</a></h1>
+                <h1 class="banner-title">E.T.I.R.Z <br> José Laurencio Silva</h1>
+                <img src="/resources/images/descarga.jpeg" alt="" class="banner-img">
             </div>
         </header>
         <main>
