--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             gtag("config", "G-HMVM5Z2JYX");
         </script>
         <meta charset="UTF-8" />
-        <title>Inicio - ETIRZ</title>
+        <title>Inicio - José Laurencio Silva</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet" />
@@ -29,9 +29,18 @@
         <main>
             <section class="main-section">
                 <div class="div-section">
-                    <article class="main-resume">
-                        <p class="text-resume">El Liceo "José Laurencio Silva", es la escuela donde se ofrece estudios correspondientes al Nivel de Educación Básica general y profesional.</p>
-                    </article>
+                    <div class="slider-container">
+                        <div class="background-gradient"></div>
+                        <div class="img-container">
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                        </div>
+                    </div>
+                    <div class="text-resume">
+                        <p>El Liceo "José Laurencio Silva", es la escuela donde se ofrece estudios correspondientes al Nivel de Educación Básica general y profesional.</p>
+                    </div>
                 </div>
                 <hr />
                 <div class="div-section">
