--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             gtag("config", "G-HMVM5Z2JYX");
         </script>
         <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Inicio - José Laurencio Silva</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -28,7 +30,7 @@
         </header>
         <main>
             <section class="main-section">
-                <div class="div-section">
+                <div class="div-section slider-effect">
                     <div class="slider-container">
                         <div class="background-gradient"></div>
                         <div class="img-container">
@@ -43,7 +45,7 @@
                     </div>
                 </div>
                 <hr />
-                <div class="div-section">
+                <div class="div-section sections">
                     <article class="menciones">
                         <h2 class="article-title">Menciones</h2>
                         <div class="article-container">
@@ -109,7 +111,7 @@
         </main>
         <footer>
             <div class="footer-div">
-                <div class="footer-directon">
+                <div class="footer-direction">
                     <h3 class="footer-title">Dirección</h3>
                     <p>Tinaquillo, estado Cojedes.<br />Calle Plaza frente a la Urbanización Buenos Aires.</p>
                 </div>
