"Menú de Navegación".
Se creó una barra de navegación.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <div class="article-container">
                             <div class="article-content">
                                 <div>
-                                    <p>Mecánica</p>
+                                    <a href="/pages/menciones/mecanica.html"><p>Mecánica</p></a>
                                     <p>Administración</p>
                                 </div>
                                 <div>
