--- a/pages/menciones/mecanica.html
+++ b/pages/menciones/mecanica.html
@@ -27,10 +27,37 @@
                 <h1 class="banner-title">E.T.I.R.Z <br> José Laurencio Silva</h1>
                 <img src="/resources/images/descarga.jpeg" alt="" class="banner-img">
             </div>
-            <nav><!-- todo Barra de Navegación --></nav>
+            <nav class="nav-bar">
+                <div class="menu">
+                    <ul>
+                        <li><a href="/index.html">Inicio</a></li>
+                        <li>
+                            <a href="#">Menciones</a>
+                            <ul>
+                                <li><a href="/pages/menciones/mecanica.html">Mecánica</a></li>
+                                <li><a href="#">Administración</a></li>
+                                <li><a href="#">Minas</a></li>
+                                <li><a href="#">Informática</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">Nosotros</a>
+                            <ul>
+                                <li><a href="#">Historia</a></li>
+                                <li><a href="#">Misión</a></li>
+                                <li><a href="#">Visión</a></li>
+                                <li><a href="#">Valores</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">Estructura Física</a></li>
+                        <li><a href="#">Servicios</a></li>
+                        <li><a href="#">Galería</a></li>
+                    </ul>
+                </div>
+            </nav>
         </header>
         <main>
-            <section class="main-section">
+            <section class="main-section side">
                 <div class="div-section">
                     <div class="img-section-container">
                         <img src="" alt="" class="img-section">
