"Sección del concepto".
Se agregó la sección principal del contenido de la página.

Se agregó el concepto de técnico medio en mecánica.

--- a/pages/menciones/mecanica.html
+++ b/pages/menciones/mecanica.html
@@ -59,12 +59,27 @@
         <main>
             <section class="main-section side">
                 <div class="div-section">
-                    <div class="img-section-container">
-                        <img src="" alt="" class="img-section">
-                        <img src="" alt="" class="img-section">
-                    </div>
-                    <div class="text-section">
-                        <p></p>
+                    <div class="content-section">
+                        <h1 class="title-section">Mecánica</h1>
+                        <div class="img-content-container">
+                            <div class="img-description">
+                                <p>
+                                    El Salón de Mecánica, ubicado a la derecha del Comedor.
+                                </p>
+                            </div>
+                        </div>
+                        <p class="text-section">Los técnicos medios en mecánica se encargan del diseño, desarrollo, mantenimiento y operación de todo tipo de máquinas y de sus equipamientos. Trabajan en una amplia gama de industrias, incluyendo industrias manufactureras o de procesamiento.</p>
+                        <br>
+                        <p class="text-section">Toma parte en la planificación, proyecto, instalación y mantenimiento de cualquier complejo industrial. Se desenvuelve en los campos de Electricidad, Automotriz y Refrigeración. Su trabajo empieza con la programación de los sistemas de producción, teniendo especialmente en cuenta cuestiones tales como materiales, costes y eficiencia.</p>
+                        <br>
+                        <p class="text-section">Los técnicos medios en mecánica diseñan y operan programas pensados para mantener el funcionamiento de la maquinaria, y proporcionan asesoramiento técnico en el diagnóstico y reparación de averías en el equipamiento y los instrumentos industriales.</p>
+                        <br>
+                        <p class="text-section">La clasificación de las materias en la mención mecánica son:</p>
+                        <ul class="list-section">
+                            <p><b>4to año: </b><!-- todo --></p>
+                            <p><b>5to año: </b><!-- todo --></p>
+                            <p><b>6to año: </b><!-- todo --></p>
+                        </ul>
                     </div>
                 </div>
             </section>
