--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             gtag("config", "G-HMVM5Z2JYX");
         </script>
         <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Inicio - José Laurencio Silva</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
