--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </main>
         <footer>
             <div class="footer-div">
-                <div class="footer-directon">
+                <div class="footer-direction">
                     <h3 class="footer-title">Dirección</h3>
                     <p>Tinaquillo, estado Cojedes.<br />Calle Plaza frente a la Urbanización Buenos Aires.</p>
                 </div>
