"Informática, Administración y Minas".
Se agregaron las páginas de Informática, Administración y Minas.

Se removió el efecto hover de mostrar una descripción de cada imágen.

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
                             <div class="article-content">
                                 <div>
                                     <a href="/pages/menciones/mecanica.html"><p>Mecánica</p></a>
-                                    <p>Administración</p>
+                                    <a href="/pages/menciones/administracion.html"><p>Administración</p></a>
                                 </div>
                                 <div>
-                                    <p>Minas</p>
-                                    <p>Informática</p>
+                                    <a href="/pages/menciones/minas.html"><p>Minas</p></a>
+                                    <a href="/pages/menciones/informatica.html"><p>Informática</p></a>
                                 </div>
                             </div>
                         </div>
