--- a/pages/menciones/administracion.html
+++ b/pages/menciones/administracion.html
@@ -15,7 +15,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Mecánica - Jose Laurencio Silva</title>
+        <title>Administración - Jose Laurencio Silva</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet" />
@@ -34,8 +34,8 @@
                         <li>
                             <a href="#">Menciones</a>
                             <ul>
-                                <li><a href="#">Mecánica</a></li>
-                                <li><a href="/pages/menciones/administracion.html">Administración</a></li>
+                                <li><a href="/pages/menciones/mecanica.html">Mecánica</a></li>
+                                <li><a href="#">Administración</a></li>
                                 <li><a href="/pages/menciones/minas.html">Minas</a></li>
                                 <li><a href="/pages/menciones/informatica.html">Informática</a></li>
                             </ul>
@@ -60,15 +60,13 @@
             <section class="main-section side">
                 <div class="div-section">
                     <div class="content-section">
-                        <h1 class="title-section">Mecánica</h1>
-                        <img src="/resources/images/menciones/mecanica1.jpg" alt="Mecánica" class="img-content">
-                        <p class="text-section">Los técnicos medios en mecánica se encargan del diseño, desarrollo, mantenimiento y operación de todo tipo de máquinas y de sus equipamientos. Trabajan en una amplia gama de industrias, incluyendo industrias manufactureras o de procesamiento.</p>
+                        <h1 class="title-section">Administración</h1>
+                        <img src="/resources/images/menciones/administracion1.jpg" alt="" class="img-content">
+                        <p class="text-section">El técnico en Administración esta capacitado para ejecutar y coordinar procesos administrativos, de recursos humanos y operaciones financieras de una organización, colaborando desde el análisis técnico en la toma de decisiones.</p>
                         <br>
-                        <p class="text-section">Toma parte en la planificación, proyecto, instalación y mantenimiento de cualquier complejo industrial. Se desenvuelve en los campos de Electricidad, Automotriz y Refrigeración. Su trabajo empieza con la programación de los sistemas de producción, teniendo especialmente en cuenta cuestiones tales como materiales, costes y eficiencia.</p>
+                        <p class="text-section">Su preparación en actividades teórico-prácticas le proporcionan la experiencia requerida para ser un profesional analítico, creativo, optimista y ético en el desempeño de sus funciones. Aplica sus conocimientos y habilidades en administración para participar eficientemente en la organización un funcionamiento de las instituciones, seleccionando y controlando la administración de los diferentes recursos, diseñando estrategias que le permiten evaluar y retroalimentar el proceso administrativo a través del análisis y su criterio científico.</p>
                         <br>
-                        <p class="text-section">Los técnicos medios en mecánica diseñan y operan programas pensados para mantener el funcionamiento de la maquinaria, y proporcionan asesoramiento técnico en el diagnóstico y reparación de averías en el equipamiento y los instrumentos industriales.</p>
-                        <br>
-                        <p class="text-section">La clasificación de las materias en la mención mecánica son:</p>
+                        <p class="text-section">Las materias de la mención de Administración se clasifican en:</p>
                         <ul class="list-section">
                             <p><b>4to año: </b><!-- todo --></p>
                             <p><b>5to año: </b><!-- todo --></p>
