--- a/pages/menciones/minas.html
+++ b/pages/menciones/minas.html
@@ -15,7 +15,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Mecánica - Jose Laurencio Silva</title>
+        <title>Minas - Jose Laurencio Silva</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet" />
@@ -34,9 +34,9 @@
                         <li>
                             <a href="#">Menciones</a>
                             <ul>
-                                <li><a href="#">Mecánica</a></li>
+                                <li><a href="/pages/menciones/mecanica.html">Mecánica</a></li>
                                 <li><a href="/pages/menciones/administracion.html">Administración</a></li>
-                                <li><a href="/pages/menciones/minas.html">Minas</a></li>
+                                <li><a href="#">Minas</a></li>
                                 <li><a href="/pages/menciones/informatica.html">Informática</a></li>
                             </ul>
                         </li>
@@ -60,15 +60,13 @@
             <section class="main-section side">
                 <div class="div-section">
                     <div class="content-section">
-                        <h1 class="title-section">Mecánica</h1>
-                        <img src="/resources/images/menciones/mecanica1.jpg" alt="Mecánica" class="img-content">
-                        <p class="text-section">Los técnicos medios en mecánica se encargan del diseño, desarrollo, mantenimiento y operación de todo tipo de máquinas y de sus equipamientos. Trabajan en una amplia gama de industrias, incluyendo industrias manufactureras o de procesamiento.</p>
+                        <h1 class="title-section">Minas</h1>
+                        <img src="/resources/images/menciones/minas1.jpg" alt="" class="img-content">
+                        <p class="text-section">Los técnicos en minería realizan tareas técnicas para ayudar en la investigación y experimentación relacionada con la metalurgia, en la mejora de los métodos de extracción de minerales sólidos, petróleo y gas, y en el diseño, construcción, operación, mantenimiento y reparación de las minas y las instalaciones, de los sistemas de transporte y almacenamiento de petróleo y gas natural, y para la extracción de metales de los minerales.</p>
                         <br>
-                        <p class="text-section">Toma parte en la planificación, proyecto, instalación y mantenimiento de cualquier complejo industrial. Se desenvuelve en los campos de Electricidad, Automotriz y Refrigeración. Su trabajo empieza con la programación de los sistemas de producción, teniendo especialmente en cuenta cuestiones tales como materiales, costes y eficiencia.</p>
+                        <p class="text-section">Sus responsabilidades incluyen calcular el uso y valor potenciales de los depósitos minerales, la gestión y expansión de las minas, y la previsión de los posibles efectos ambientales de la minería, como puede ser la contaminación atmosférica.</p>
                         <br>
-                        <p class="text-section">Los técnicos medios en mecánica diseñan y operan programas pensados para mantener el funcionamiento de la maquinaria, y proporcionan asesoramiento técnico en el diagnóstico y reparación de averías en el equipamiento y los instrumentos industriales.</p>
-                        <br>
-                        <p class="text-section">La clasificación de las materias en la mención mecánica son:</p>
+                        <p class="text-section">La clasificación de las materias son:</p>
                         <ul class="list-section">
                             <p><b>4to año: </b><!-- todo --></p>
                             <p><b>5to año: </b><!-- todo --></p>
