--- a/pages/menciones/informatica.html
+++ b/pages/menciones/informatica.html
@@ -15,7 +15,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Mecánica - Jose Laurencio Silva</title>
+        <title>Informática - Jose Laurencio Silva</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet" />
@@ -34,10 +34,10 @@
                         <li>
                             <a href="#">Menciones</a>
                             <ul>
-                                <li><a href="#">Mecánica</a></li>
+                                <li><a href="/pages/menciones/mecanica.html">Mecánica</a></li>
                                 <li><a href="/pages/menciones/administracion.html">Administración</a></li>
                                 <li><a href="/pages/menciones/minas.html">Minas</a></li>
-                                <li><a href="/pages/menciones/informatica.html">Informática</a></li>
+                                <li><a href="#">Informática</a></li>
                             </ul>
                         </li>
                         <li>
@@ -60,15 +60,13 @@
             <section class="main-section side">
                 <div class="div-section">
                     <div class="content-section">
-                        <h1 class="title-section">Mecánica</h1>
-                        <img src="/resources/images/menciones/mecanica1.jpg" alt="Mecánica" class="img-content">
-                        <p class="text-section">Los técnicos medios en mecánica se encargan del diseño, desarrollo, mantenimiento y operación de todo tipo de máquinas y de sus equipamientos. Trabajan en una amplia gama de industrias, incluyendo industrias manufactureras o de procesamiento.</p>
+                        <h1 class="title-section">Informática</h1>
+                        <img src="/resources/images/menciones/informatica1.jpg" alt="" class="img-content">
+                        <p class="text-section">El Técnico en informática analiza, diseña y maneja sistemas de información. Desarrolla distintos tipos de estructuras lógcias para solucionar problemas usando computadoras. Toma decisiones de índole administrativo, establece normas y procedimientos para los sistemas de computación desarrollados.</p>
                         <br>
-                        <p class="text-section">Toma parte en la planificación, proyecto, instalación y mantenimiento de cualquier complejo industrial. Se desenvuelve en los campos de Electricidad, Automotriz y Refrigeración. Su trabajo empieza con la programación de los sistemas de producción, teniendo especialmente en cuenta cuestiones tales como materiales, costes y eficiencia.</p>
+                        <p class="text-section">Su campo de especialización le permite un amplio manejo operativo de equipos, programas operacionales, técnicas de programación, lenguajes de computación, metodología de análisis de sistemas, estructuración de datos y desempeño en el área de la ofimática.</p>
                         <br>
-                        <p class="text-section">Los técnicos medios en mecánica diseñan y operan programas pensados para mantener el funcionamiento de la maquinaria, y proporcionan asesoramiento técnico en el diagnóstico y reparación de averías en el equipamiento y los instrumentos industriales.</p>
-                        <br>
-                        <p class="text-section">La clasificación de las materias en la mención mecánica son:</p>
+                        <p class="text-section">La clasificación de las materias impartidas en la mención informática son:</p>
                         <ul class="list-section">
                             <p><b>4to año: </b><!-- todo --></p>
                             <p><b>5to año: </b><!-- todo --></p>
