--- a/pages/nosotros/mision_vision_valores.html
+++ b/pages/nosotros/mision_vision_valores.html
@@ -67,8 +67,8 @@
                     <div class="content-section">
                         <h1 class="title-section">Misión, Visión y Valores</h1>
                         <div>
-                            <img src="/resources/images/imagen_antigua_liceo.jpg" alt="" class="img-content" />
-                            <i>Imágen de la entrada del Liceo en el 2008.</i>
+                            <img src="/resources/images/nosotros/mision_vision_valores.jpeg" alt="" class="img-content" />
+                            <i><strong>Imágen de los estudiantes de 1er año.</strong></i>
                         </div>
                         <p class="text-section">
                             <ul>
